--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,7 @@ header {
     justify-content: center;
     flex-wrap: wrap;
     background: #03071E;
+    padding: 20px;
 }
 
 .logo-container {
@@ -40,9 +41,7 @@ header {
 }
 
 .menu ul {
-    height: 100%;
     display: flex;
-    gap: 50px;
     justify-content: center;
     align-items: center;
     list-style-type: none;
@@ -51,7 +50,9 @@ header {
 }
 
 .menu ul li {
+    height: 100%;
     width: 4%;
+    min-width: 120px;
     height: 100%;
     display: flex;
     justify-content: center;
@@ -65,8 +66,13 @@ header {
     background-color: #FFBA08;
     color: #03071E;
     font-weight: 800;
-    width: 120px;
+    width: 180px;
     height: 60%;
     transition: 0.2s;
     border-radius: 10px;
+}
+@media (max-width: 600px) {
+  header{
+    
+  }
 }
