--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,69 +7,7 @@
 
 body {
   font-family: 'Roboto Mono', monospace;
-}
-
-header {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  background: #03071E;
-  padding: 20px;
-}
-
-.logo-container {
-  width: 8%;
-  max-width: 150px;
-  min-width: 130px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: white;
-  transition: 0.2s;
-  border-radius: 50%;
-}
-
-.logo-container:hover {}
-
-.logo-container img {
-  width: 100%;
-}
-
-.menu {
-  width: 92%;
-}
-
-.menu ul {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  list-style-type: none;
-  flex-wrap: wrap;
-  color: white;
-  height: 100%;
-}
-
-.menu ul li {
-  width: 4%;
-  min-width: 120px;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  align-items: center;
-  padding: 25px;
-  cursor: pointer;
-  box-sizing: border-box;
-}
-
-.menu ul li:hover {
-  background-color: #FFBA08;
-  color: #03071E;
-  font-weight: 800;
-  width: 180px;
-  height: 60%;
-  transition: 0.2s;
-  border-radius: 10px;
+  overflow: hidden;
 }
 
 main{
@@ -86,7 +24,6 @@ main{
 
 .banner {
   width: 100%;
-  height: 100%;
   display: none;
   transition: opacity 0.5s;
   position: absolute;
