--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,10 +7,11 @@
 
 body {
   font-family: 'Roboto Mono', monospace;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 main{
+  z-index: -1;
   position: relative;
   height: 70vh;
 }
