--- a/assets/css/ingressos.css
+++ b/assets/css/ingressos.css
@@ -63,3 +63,30 @@
     border-radius: 20px;
     border: none;
 }
+.movie-selection-container{
+    background-color: black;
+    margin: 0;
+}
+.movies-card-container{
+    margin: 0% 2%;
+    padding: 2% 0%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.movie{ /* cards de filmes */
+    box-sizing: border-box;
+    min-width: 300px;
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    gap: 20px;
+    margin: 20px;
+    justify-content: flex-end;
+    color: white;
+    padding: 20px;
+}
+.movie img{
+    width: 100%;
+}
