--- a/assets/css/ingressos.css
+++ b/assets/css/ingressos.css
@@ -64,7 +64,7 @@
     border: none;
 }
 .movie-selection-container{
-    background-color: black;
+    background-color: rgb(26, 26, 26);
     margin: 0;
 }
 .movies-card-container{
@@ -83,10 +83,16 @@
     text-align: center;
     gap: 20px;
     margin: 20px;
-    justify-content: flex-end;
+    justify-content: flex-start;
     color: white;
     padding: 20px;
+    border: 1px solid white;
+    border-radius: 10px;
+}
+.movie .btn-buy-ticket{
+    margin-top: auto;
 }
 .movie img{
     width: 100%;
+    border-radius: 10px 10px 0px 0px;
 }
