--- a/assets/css/filme.css
+++ b/assets/css/filme.css
@@ -1,5 +1,8 @@
+body{
+    background-color: black;
+}
 .featured-movie{
-    background-image: url('https://d235gwso45fsgz.cloudfront.net/as-assets/variants/c0r85kdgrsnl6j4fgwj8e0xqtjq9/2748e9350ed673f0bc85d759bfecfbf38216ad0efa85a36a7f0474da46c6343d');
+    background-image: url('https://grupomobicine.com.br/wp-content/uploads/Banner-B-1.png');
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
@@ -42,8 +45,6 @@
     padding: 20px;
     margin: auto;
 }
-
-
 .featured-movie-classify{
     display: flex;
     align-items: center;
@@ -63,37 +64,35 @@
     border-radius: 20px;
     border: none;
 }
-.movie-selection-container{
-    background-color: rgb(26, 26, 26);
-    margin: 0;
+.tickets-time-container{
+    width: 100%;
+    background-color: black;
+    color: white;
+    padding: 50px 0px;
 }
-.movies-card-container{
-    margin: 0% 2%;
-    padding: 2% 0%;
+.tickets-time{
+    width: 70%;
+    margin: auto;
+    padding: 25px;
+    border: 1px solid white;
+    border-radius: 5px;
+}
+.time-container{
     display: flex;
-    justify-content: center;
+    margin: 20px 0px;
+    gap: 20px;
     flex-wrap: wrap;
 }
-.movie{ /* cards de filmes */
-    box-sizing: border-box;
-    min-width: 300px;
-    width: 30%;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    gap: 20px;
-    margin: 20px;
-    justify-content: flex-start;
-    color: white;
-    padding: 20px;
+.time{
     border: 1px solid white;
-    border-radius: 10px;
+    padding: 10px 20px;
+    border-radius: 50px;
 }
-
-.movie img{
-    width: 100%;
-    border-radius: 10px 10px 0px 0px;
-}
-.link-btn-buy{
-    margin-top: auto;
+.time:hover{
+    background-color: #0CB2FE;
+    color: #F105A5;
+    font-weight: 800;
+    cursor: pointer;
+    transition: 0.2s;
+    border: 1px solid #F105A5;
 }
