--- a/assets/css/filme.css
+++ b/assets/css/filme.css
@@ -66,7 +66,7 @@ body{
 }
 .tickets-time-container{
     width: 100%;
-    background-color: black;
+    background-color: rgb(0, 0, 0);
     color: white;
     padding: 50px 0px;
 }
@@ -76,6 +76,7 @@ body{
     padding: 25px;
     border: 1px solid white;
     border-radius: 5px;
+    background-color: #03071E;
 }
 .time-container{
     display: flex;
